--- a/Foresome/Foresome/Onboarding/ForgotPassword/View/ForgotPasswordViewController.xib
+++ b/Foresome/Foresome/Onboarding/ForgotPassword/View/ForgotPasswordViewController.xib
@@ -22,8 +22,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ForgotPasswordViewController" customModule="Foresome" customModuleProvider="target">
             <connections>
+                <outlet property="forgotLabel" destination="fjG-r9-2c3" id="hf0-0x-tyh"/>
                 <outlet property="submitBottomConstraint" destination="qzn-dd-XEg" id="EIX-J0-gIt"/>
-                <outlet property="submitButton" destination="4yF-y1-dS1" id="klj-JG-ZKA"/>
+                <outlet property="submitButton" destination="4yF-y1-dS1" id="zfq-ns-3N6"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -33,31 +34,16 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9fK-DQ-gCh">
-                    <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                    <rect key="frame" x="0.0" y="100" width="393" height="752"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qnj-2y-nSf">
-                            <rect key="frame" x="24" y="56" width="24" height="24"/>
-                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                            <state key="normal" image="ic_back_black"/>
-                            <connections>
-                                <action selector="backAction:" destination="-1" eventType="touchUpInside" id="qdn-4K-1Hl"/>
-                            </connections>
-                        </button>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i1m-7w-iBJ">
-                            <rect key="frame" x="0.0" y="95" width="393" height="1"/>
-                            <color key="backgroundColor" red="0.92941176470588238" green="0.92941176470588238" blue="0.92941176470588238" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="1" id="dIr-K9-cQH"/>
-                            </constraints>
-                        </view>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgot Your Password?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fjG-r9-2c3">
-                            <rect key="frame" x="24" y="128" width="345" height="89.666666666666686"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Forgot Your Password?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fjG-r9-2c3">
+                            <rect key="frame" x="24" y="30.000000000000007" width="345" height="89.666666666666686"/>
                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="32"/>
                             <color key="textColor" red="0.13333333333333333" green="0.15686274509803921" blue="0.19215686274509802" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your email and we will send you a link to reset your password." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R6r-tH-bNz">
-                            <rect key="frame" x="24" y="233.66666666666663" width="345" height="50"/>
+                            <rect key="frame" x="24" y="133.66666666666666" width="345" height="50"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="RzH-pn-0TM"/>
                             </constraints>
@@ -66,7 +52,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FaM-pr-GIQ">
-                            <rect key="frame" x="24" y="315.66666666666669" width="345" height="56"/>
+                            <rect key="frame" x="24" y="213.66666666666669" width="345" height="56"/>
                             <subviews>
                                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cjz-S0-71g">
                                     <rect key="frame" x="16" y="0.0" width="329" height="56"/>
@@ -96,7 +82,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4yF-y1-dS1">
-                            <rect key="frame" x="40" y="766" width="329" height="56"/>
+                            <rect key="frame" x="40" y="666" width="329" height="56"/>
                             <color key="backgroundColor" red="0.25098039215686274" green="0.80392156862745101" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="56" id="fWA-ty-j2c"/>
@@ -110,6 +96,9 @@
                                     <real key="value" value="16"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="submitAction:" destination="-1" eventType="touchUpInside" id="f9h-vf-zLE"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -119,28 +108,59 @@
                         <constraint firstItem="FaM-pr-GIQ" firstAttribute="leading" secondItem="9fK-DQ-gCh" secondAttribute="leading" constant="24" id="A7d-T6-W0T"/>
                         <constraint firstItem="R6r-tH-bNz" firstAttribute="leading" secondItem="fjG-r9-2c3" secondAttribute="leading" id="BSb-hT-oYY"/>
                         <constraint firstItem="R6r-tH-bNz" firstAttribute="trailing" secondItem="fjG-r9-2c3" secondAttribute="trailing" id="DjL-Y0-aBw"/>
-                        <constraint firstItem="FaM-pr-GIQ" firstAttribute="top" secondItem="R6r-tH-bNz" secondAttribute="bottom" constant="32" id="FLf-CW-2h3"/>
+                        <constraint firstItem="FaM-pr-GIQ" firstAttribute="top" secondItem="R6r-tH-bNz" secondAttribute="bottom" constant="30" id="FLf-CW-2h3"/>
                         <constraint firstAttribute="trailing" secondItem="fjG-r9-2c3" secondAttribute="trailing" constant="24" id="HWr-Nw-La3"/>
                         <constraint firstItem="4yF-y1-dS1" firstAttribute="leading" secondItem="cjz-S0-71g" secondAttribute="leading" id="JhO-cY-5W6"/>
-                        <constraint firstItem="qnj-2y-nSf" firstAttribute="leading" secondItem="9fK-DQ-gCh" secondAttribute="leading" constant="24" id="UjR-hL-DCQ"/>
-                        <constraint firstAttribute="trailing" secondItem="i1m-7w-iBJ" secondAttribute="trailing" id="W41-03-yaK"/>
                         <constraint firstItem="4yF-y1-dS1" firstAttribute="trailing" secondItem="cjz-S0-71g" secondAttribute="trailing" id="aba-sr-XNg"/>
-                        <constraint firstItem="qnj-2y-nSf" firstAttribute="top" secondItem="9fK-DQ-gCh" secondAttribute="top" constant="56" id="fXX-6k-CI5"/>
-                        <constraint firstItem="i1m-7w-iBJ" firstAttribute="leading" secondItem="9fK-DQ-gCh" secondAttribute="leading" id="fqU-LA-WAs"/>
-                        <constraint firstItem="R6r-tH-bNz" firstAttribute="top" secondItem="fjG-r9-2c3" secondAttribute="bottom" constant="16" id="hy2-dh-wS6"/>
-                        <constraint firstItem="fjG-r9-2c3" firstAttribute="top" secondItem="i1m-7w-iBJ" secondAttribute="bottom" constant="32" id="oi3-Zz-UHg"/>
+                        <constraint firstItem="R6r-tH-bNz" firstAttribute="top" secondItem="fjG-r9-2c3" secondAttribute="bottom" constant="14" id="hy2-dh-wS6"/>
                         <constraint firstAttribute="bottom" secondItem="4yF-y1-dS1" secondAttribute="bottom" constant="30" id="qzn-dd-XEg"/>
-                        <constraint firstItem="i1m-7w-iBJ" firstAttribute="top" secondItem="qnj-2y-nSf" secondAttribute="bottom" constant="15" id="xvJ-gW-daY"/>
+                        <constraint firstItem="fjG-r9-2c3" firstAttribute="top" secondItem="9fK-DQ-gCh" secondAttribute="top" constant="30" id="wzG-DO-RfJ"/>
                         <constraint firstItem="4yF-y1-dS1" firstAttribute="top" relation="greaterThanOrEqual" secondItem="cjz-S0-71g" secondAttribute="bottom" constant="20" id="y4k-UQ-VVk"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ad2-Nn-7Dr">
+                    <rect key="frame" x="0.0" y="59" width="393" height="41"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="77A-sx-2JU">
+                            <rect key="frame" x="24" y="0.0" width="40" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="40" id="1ED-af-4rb"/>
+                                <constraint firstAttribute="height" constant="40" id="7lG-1e-Vze"/>
+                            </constraints>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="ic_back_black"/>
+                            <connections>
+                                <action selector="backAction:" destination="-1" eventType="touchUpInside" id="XKq-ci-t7V"/>
+                            </connections>
+                        </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J6F-1V-qtr">
+                            <rect key="frame" x="0.0" y="40" width="393" height="1"/>
+                            <color key="backgroundColor" red="0.92941176469999998" green="0.92941176469999998" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="GBH-MA-PfI"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="J6F-1V-qtr" firstAttribute="leading" secondItem="Ad2-Nn-7Dr" secondAttribute="leading" id="A9E-Y4-LvI"/>
+                        <constraint firstItem="77A-sx-2JU" firstAttribute="top" secondItem="Ad2-Nn-7Dr" secondAttribute="top" id="MGT-f3-yqj"/>
+                        <constraint firstAttribute="trailing" secondItem="J6F-1V-qtr" secondAttribute="trailing" id="Rif-Dc-e16"/>
+                        <constraint firstItem="77A-sx-2JU" firstAttribute="leading" secondItem="Ad2-Nn-7Dr" secondAttribute="leading" constant="24" id="hIq-h4-2Yf"/>
+                        <constraint firstItem="J6F-1V-qtr" firstAttribute="top" secondItem="77A-sx-2JU" secondAttribute="bottom" id="reA-RH-77X"/>
+                        <constraint firstAttribute="bottom" secondItem="J6F-1V-qtr" secondAttribute="bottom" id="vWN-Rm-gfO"/>
                     </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="Ad2-Nn-7Dr" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="72M-FC-Y5v"/>
+                <constraint firstItem="Ad2-Nn-7Dr" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="GsQ-x8-rxG"/>
+                <constraint firstItem="Ad2-Nn-7Dr" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="SxH-fK-R7h"/>
+                <constraint firstItem="9fK-DQ-gCh" firstAttribute="top" secondItem="Ad2-Nn-7Dr" secondAttribute="bottom" id="W7y-dp-ygW"/>
                 <constraint firstAttribute="trailing" secondItem="9fK-DQ-gCh" secondAttribute="trailing" id="a0e-jK-4Pj"/>
                 <constraint firstItem="9fK-DQ-gCh" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="c5a-4G-Y2I"/>
-                <constraint firstItem="9fK-DQ-gCh" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="kIX-iQ-Vj7"/>
                 <constraint firstAttribute="bottom" secondItem="9fK-DQ-gCh" secondAttribute="bottom" id="nmS-wI-y5R"/>
             </constraints>
             <point key="canvasLocation" x="110.68702290076335" y="20.422535211267608"/>
