--- a/Foresome/Foresome/Onboarding/Login/View/LoginViewController.xib
+++ b/Foresome/Foresome/Onboarding/Login/View/LoginViewController.xib
@@ -35,7 +35,7 @@
                     <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="abH-5b-PYA">
-                            <rect key="frame" x="0.0" y="0.0" width="393" height="813.66666666666663"/>
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="759"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="header_logo" translatesAutoresizingMaskIntoConstraints="NO" id="e4D-Nc-NDp">
                                     <rect key="frame" x="24" y="16" width="345" height="40"/>
@@ -44,30 +44,31 @@
                                     </constraints>
                                 </imageView>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="w84-ot-sOg">
-                                    <rect key="frame" x="24" y="82" width="345" height="79.666666666666686"/>
+                                    <rect key="frame" x="24" y="80" width="345" height="77.666666666666686"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rrc-JO-4d5">
                                             <rect key="frame" x="0.0" y="0.0" width="70.666666666666671" height="36.666666666666664"/>
                                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="26"/>
-                                            <nil key="textColor"/>
+                                            <color key="textColor" red="0.13333333333333333" green="0.15686274509803921" blue="0.19215686274509802" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KZg-PQ-inZ">
-                                            <rect key="frame" x="0.0" y="44.666666666666657" width="160.66666666666666" height="35"/>
+                                            <rect key="frame" x="0.0" y="44.666666666666657" width="137.33333333333334" height="33"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New here?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vl2-Bu-5LD">
-                                                    <rect key="frame" x="0.0" y="0.0" width="79.333333333333329" height="35"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="79.333333333333329" height="33"/>
                                                     <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="15"/>
                                                     <color key="textColor" red="0.13333333333333333" green="0.15686274509803921" blue="0.19215686274509802" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9EX-Nh-uYg">
-                                                    <rect key="frame" x="79.333333333333343" y="0.0" width="81.333333333333343" height="35"/>
+                                                    <rect key="frame" x="79.333333333333329" y="0.0" width="57.999999999999986" height="33"/>
+                                                    <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="15"/>
                                                     <color key="tintColor" name="Signup color"/>
-                                                    <state key="normal" title="Button"/>
-                                                    <buttonConfiguration key="configuration" style="plain" title="Sign up">
-                                                        <fontDescription key="titleFontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="15"/>
-                                                    </buttonConfiguration>
+                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                    <state key="normal" title="Sign up">
+                                                        <color key="titleColor" name="Signup color"/>
+                                                    </state>
                                                     <connections>
                                                         <action selector="signUpAction:" destination="-1" eventType="touchUpInside" id="E7k-AA-Tk6"/>
                                                     </connections>
@@ -77,7 +78,7 @@
                                     </subviews>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="ELi-8u-MKZ">
-                                    <rect key="frame" x="24" y="185.66666666666663" width="345" height="200"/>
+                                    <rect key="frame" x="24" y="181.66666666666666" width="345" height="127.99999999999997"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NKh-xx-eUg">
                                             <rect key="frame" x="0.0" y="0.0" width="345" height="56"/>
@@ -162,18 +163,10 @@
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
                                         </view>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YAv-R2-rwU">
-                                            <rect key="frame" x="0.0" y="144.00000000000003" width="345" height="56"/>
-                                            <state key="normal" title="Button"/>
-                                            <buttonConfiguration key="configuration" style="plain" title="Forgot password"/>
-                                            <connections>
-                                                <action selector="forgotPasswordAction:" destination="-1" eventType="touchUpInside" id="OiD-BX-mj7"/>
-                                            </connections>
-                                        </button>
                                     </subviews>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="gHY-KC-xOL">
-                                    <rect key="frame" x="24" y="433.66666666666674" width="345" height="344"/>
+                                    <rect key="frame" x="24" y="379" width="345" height="344"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ixo-15-gPh">
                                             <rect key="frame" x="0.0" y="0.0" width="345" height="56"/>
@@ -197,7 +190,7 @@
                                             </connections>
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or continue with social account." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1D1-BZ-8s2">
-                                            <rect key="frame" x="0.0" y="71.999999999999943" width="345" height="56"/>
+                                            <rect key="frame" x="0.0" y="72" width="345" height="56"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="56" id="4Ey-cd-hQE"/>
                                             </constraints>
@@ -206,7 +199,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I3Q-Z2-Vvg">
-                                            <rect key="frame" x="0.0" y="143.99999999999994" width="345" height="56"/>
+                                            <rect key="frame" x="0.0" y="144" width="345" height="56"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="56" id="OLa-LG-oku"/>
                                             </constraints>
@@ -230,7 +223,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tu9-xs-IOD">
-                                            <rect key="frame" x="0.0" y="215.99999999999994" width="345" height="56"/>
+                                            <rect key="frame" x="0.0" y="216" width="345" height="56"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="56" id="rtw-jq-VZE"/>
                                             </constraints>
@@ -254,7 +247,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W2Z-od-1aS">
-                                            <rect key="frame" x="0.0" y="287.99999999999994" width="345" height="56"/>
+                                            <rect key="frame" x="0.0" y="288" width="345" height="56"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="56" id="D6J-LE-eDX"/>
                                             </constraints>
@@ -279,18 +272,28 @@
                                         </button>
                                     </subviews>
                                 </stackView>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YAv-R2-rwU">
+                                    <rect key="frame" x="217.33333333333337" y="317" width="151.66666666666663" height="34.333333333333314"/>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="plain" title="Forgot password"/>
+                                    <connections>
+                                        <action selector="forgotPasswordAction:" destination="-1" eventType="touchUpInside" id="OiD-BX-mj7"/>
+                                    </connections>
+                                </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
-                                <constraint firstItem="gHY-KC-xOL" firstAttribute="top" secondItem="ELi-8u-MKZ" secondAttribute="bottom" constant="48" id="23E-H2-hqe"/>
-                                <constraint firstItem="gHY-KC-xOL" firstAttribute="leading" secondItem="ELi-8u-MKZ" secondAttribute="leading" id="6RF-on-VMb"/>
                                 <constraint firstItem="w84-ot-sOg" firstAttribute="trailing" secondItem="e4D-Nc-NDp" secondAttribute="trailing" id="7FF-uC-ByH"/>
-                                <constraint firstItem="gHY-KC-xOL" firstAttribute="trailing" secondItem="ELi-8u-MKZ" secondAttribute="trailing" id="8yd-yw-dFB"/>
+                                <constraint firstItem="YAv-R2-rwU" firstAttribute="top" secondItem="ELi-8u-MKZ" secondAttribute="bottom" constant="7.3333333333333712" id="8wa-dp-amb"/>
                                 <constraint firstItem="ELi-8u-MKZ" firstAttribute="leading" secondItem="w84-ot-sOg" secondAttribute="leading" id="9ZU-cm-wQd"/>
+                                <constraint firstItem="gHY-KC-xOL" firstAttribute="trailing" secondItem="YAv-R2-rwU" secondAttribute="trailing" id="EM5-0l-Rrk"/>
                                 <constraint firstAttribute="bottom" secondItem="gHY-KC-xOL" secondAttribute="bottom" constant="36" id="Efl-4w-1YF"/>
                                 <constraint firstItem="ELi-8u-MKZ" firstAttribute="trailing" secondItem="w84-ot-sOg" secondAttribute="trailing" id="Hcu-wP-5HU"/>
                                 <constraint firstItem="e4D-Nc-NDp" firstAttribute="top" secondItem="abH-5b-PYA" secondAttribute="top" constant="16" id="Jxw-jH-S5W"/>
-                                <constraint firstItem="w84-ot-sOg" firstAttribute="top" secondItem="e4D-Nc-NDp" secondAttribute="bottom" constant="26.000000000000114" id="q9E-rZ-n6a"/>
+                                <constraint firstItem="gHY-KC-xOL" firstAttribute="top" secondItem="YAv-R2-rwU" secondAttribute="bottom" constant="27.666666666666686" id="REu-zE-K28"/>
+                                <constraint firstItem="YAv-R2-rwU" firstAttribute="trailing" secondItem="ELi-8u-MKZ" secondAttribute="trailing" id="aiZ-NG-Tf5"/>
+                                <constraint firstItem="gHY-KC-xOL" firstAttribute="leading" secondItem="ELi-8u-MKZ" secondAttribute="leading" id="oN4-3j-rXd"/>
+                                <constraint firstItem="w84-ot-sOg" firstAttribute="top" secondItem="e4D-Nc-NDp" secondAttribute="bottom" constant="24" id="q9E-rZ-n6a"/>
                                 <constraint firstItem="w84-ot-sOg" firstAttribute="leading" secondItem="e4D-Nc-NDp" secondAttribute="leading" id="rGt-a2-tXb"/>
                                 <constraint firstAttribute="trailing" secondItem="e4D-Nc-NDp" secondAttribute="trailing" constant="24" id="sKg-Nf-wsP"/>
                                 <constraint firstItem="ELi-8u-MKZ" firstAttribute="top" secondItem="w84-ot-sOg" secondAttribute="bottom" constant="24" id="wlg-Iv-dJq"/>
