--- a/Foresome/Foresome/Onboarding/SignUp/View/SignUpViewController.xib
+++ b/Foresome/Foresome/Onboarding/SignUp/View/SignUpViewController.xib
@@ -39,30 +39,31 @@
                             <rect key="frame" x="24" y="56" width="345" height="40"/>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="b2q-Vi-Tg5">
-                            <rect key="frame" x="24" y="139" width="345" height="79.666666666666686"/>
+                            <rect key="frame" x="24" y="120" width="345" height="77.666666666666686"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign up" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tOr-al-dTD">
                                     <rect key="frame" x="0.0" y="0.0" width="99" height="36.666666666666664"/>
                                     <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="26"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" red="0.13333333333333333" green="0.15686274509803921" blue="0.19215686274509802" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LsJ-cI-bUQ">
-                                    <rect key="frame" x="0.0" y="44.666666666666657" width="203" height="35"/>
+                                    <rect key="frame" x="0.0" y="44.666666666666657" width="179" height="33"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Have an account?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oMn-fy-Gc0">
-                                            <rect key="frame" x="0.0" y="0.0" width="138" height="35"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="138" height="33"/>
                                             <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="15"/>
                                             <color key="textColor" red="0.13333333333333333" green="0.15686274509803921" blue="0.19215686274509802" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yih-pP-YHG">
-                                            <rect key="frame" x="138" y="0.0" width="65" height="35"/>
+                                            <rect key="frame" x="138" y="0.0" width="41" height="33"/>
+                                            <fontDescription key="fontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="15"/>
                                             <color key="tintColor" name="Signup color"/>
-                                            <state key="normal" title="Button"/>
-                                            <buttonConfiguration key="configuration" style="plain" title="Login">
-                                                <fontDescription key="titleFontDescription" name="Poppins-SemiBold" family="Poppins" pointSize="15"/>
-                                            </buttonConfiguration>
+                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                            <state key="normal" title="Login">
+                                                <color key="titleColor" red="0.18823529410000001" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </state>
                                             <connections>
                                                 <action selector="loginAction:" destination="-1" eventType="touchUpInside" id="fcJ-AA-Ckk"/>
                                             </connections>
@@ -72,7 +73,7 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="cMX-vv-2f4">
-                            <rect key="frame" x="24" y="242.66666666666663" width="345" height="272"/>
+                            <rect key="frame" x="24" y="221.66666666666663" width="345" height="272"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OkI-7J-nBY">
                                     <rect key="frame" x="0.0" y="0.0" width="345" height="56"/>
@@ -84,7 +85,7 @@
                                             </constraints>
                                             <color key="textColor" name="show Color"/>
                                             <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="15"/>
-                                            <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
+                                            <textInputTraits key="textInputTraits"/>
                                             <userDefinedRuntimeAttributes>
                                                 <userDefinedRuntimeAttribute type="boolean" keyPath="isRounded" value="NO"/>
                                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -244,7 +245,7 @@
                             </subviews>
                         </stackView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By using this app you agree to the FORESOME Terms of services and Privacy policy." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="czC-ft-Yu4">
-                            <rect key="frame" x="24" y="522.66666666666663" width="345" height="56"/>
+                            <rect key="frame" x="24" y="501.66666666666674" width="345" height="56"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="56" id="LZ9-tl-c88"/>
                             </constraints>
@@ -278,7 +279,7 @@
                         <constraint firstItem="Rbf-VP-RFZ" firstAttribute="leading" secondItem="xyZ-gF-Cfy" secondAttribute="leading" constant="24" id="JAA-3T-7VX"/>
                         <constraint firstAttribute="bottom" secondItem="tgt-Ot-0xf" secondAttribute="bottom" constant="36" id="JYj-go-ej8"/>
                         <constraint firstItem="b2q-Vi-Tg5" firstAttribute="leading" secondItem="Rbf-VP-RFZ" secondAttribute="leading" id="NlN-Of-xeH"/>
-                        <constraint firstItem="b2q-Vi-Tg5" firstAttribute="top" secondItem="Rbf-VP-RFZ" secondAttribute="bottom" constant="43" id="OTT-oP-6Ej"/>
+                        <constraint firstItem="b2q-Vi-Tg5" firstAttribute="top" secondItem="Rbf-VP-RFZ" secondAttribute="bottom" constant="24" id="OTT-oP-6Ej"/>
                         <constraint firstItem="czC-ft-Yu4" firstAttribute="trailing" secondItem="cMX-vv-2f4" secondAttribute="trailing" id="bbi-Bd-GCc"/>
                         <constraint firstItem="czC-ft-Yu4" firstAttribute="leading" secondItem="cMX-vv-2f4" secondAttribute="leading" id="bqK-yy-hHu"/>
                         <constraint firstAttribute="trailing" secondItem="Rbf-VP-RFZ" secondAttribute="trailing" constant="24" id="cBD-2Y-Gfr"/>
